# mymind-api

./: README.md  pyproject.toml  requirements.txt
mymind_api/: __init__.py  client.py  server.py
